<resources>
    <string name="app_name">Bilingual Reader</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_return">Return</string>
    <string name="action_positive">Yes</string>
    <string name="action_negative">No</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copied: %s</string>
    <string name="action_app_not_installed">Required App is not installed</string>
    <string name="action_scroll_up">Up</string>
    <string name="action_scroll_down">Down</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_copy_name">Copy: %s</string>
    <string name="alert_error_call_google_translate">Sorry, No Google Translation Installed.</string>
    <string name="alert_permission_files_access_denied_title">Access denied</string>
    <string name="alert_permission_files_access_denied">It not possible to obtain the access permissions to the informed folder, please obtain access in android settings.</string>
    <string name="api_error">Error connecting to API</string>
    <string name="date_format_unknown">unknown</string>
    <string name="date_format_today">Today</string>
    <string name="date_format_yesterday">Yesterday</string>
    <string name="date_format_day_ago">%s days ago.</string>
    <string name="date_format_this_week">This week</string>
    <string name="date_format_this_month">This month</string>
    <string name="date_format_month_year">%1$s %2$d</string>
    <string-array name="mouth_descriptions">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="notifications_channel_name">Bilingual Reader</string>
    <string name="notifications_channel_description">Bilingual Reader</string>
    <string name="notifications_share_mark_drive_title">Synchronization</string>
    <string name="notifications_share_mark_drive_content">Synchronization bookmarks to cloud</string>
    <string name="notifications_scanner_library">Scanning libraries</string>
    <string name="notifications_scanner_library_content">Scanning files in %1$s library folders. (%2$s)</string>
    <string name="notifications_scanner_library_processed">Scanning %s library completed successfully.</string>
    <string name="menu_search">Search</string>
    <string name="menu_manga">Comics / Mangas</string>
    <string name="menu_library">Library</string>
    <string name="menu_books">Books</string>
    <string name="menu_book">Library</string>
    <string name="menu_history">History</string>
    <string name="menu_vocabulary">Vocabulary</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_annotations">Annotations</string>
    <string name="menu_config">Configuration</string>
    <string name="menu_manga_library_type">Grid type</string>
    <string name="menu_book_library_type">Grid type</string>
    <string name="statistics_sector_system">Statistics</string>
    <string name="statistics_sector_manga">Manga / Comic</string>
    <string name="statistics_sector_book">Book</string>
    <string name="statistics_reading">Reading</string>
    <string name="statistics_to_read">To Read</string>
    <string name="statistics_library">Library</string>
    <string name="statistics_read">Read</string>
    <string name="statistics_title_completed">Completed</string>
    <string name="statistics_title_current">Current</string>
    <string name="statistics_title_pages">Pages</string>
    <string name="statistics_title_time">Reading times</string>
    <string name="statistics_total_read_pages">Total reading pages</string>
    <string name="statistics_total_read_times">Total time reading pages</string>
    <string name="statistics_total_read_average">Reading average</string>
    <string name="statistics_read_by_month">%s read / month</string>
    <string name="statistics_chart_year">Year</string>
    <string name="statistics_chart_library">Library</string>
    <string name="statistics_chart_library_all">All</string>
    <string name="statistics_average">%d minutes per page</string>
    <string name="statistics_format_days">%d days</string>
    <string name="statistics_format_hours">%d hours</string>
    <string name="statistics_format_minutes">%d minutes</string>
    <string name="statistics_format_seconds">%d seconds</string>
    <string name="config_sector_system">System</string>
    <string name="config_sector_manga">Manga / Comic</string>
    <string name="config_sector_book">Book</string>
    <string name="config_title_library">Library</string>
    <string name="config_title_libraries">Libraries</string>
    <string name="config_title_sub_title">SubTitle</string>
    <string name="config_title_system">System</string>
    <string name="config_title_reader">Reader</string>
    <string name="config_title_file_link">File link</string>
    <string name="config_title_monitoring">Monitoring</string>
    <string name="config_title_database">Database</string>
    <string name="config_title_themes">Themes</string>
    <string name="config_title_cover">Covers</string>
    <string name="config_title_statistics">Statistics</string>
    <string name="config_title_update">Update App</string>
    <string name="config_manga_switch_use_path_name_for_linked">Use page path to link pages?</string>
    <string name="config_manga_switch_use_dual_page_calculate">Consider double page by calculating dimensions?</string>
    <string name="config_manga_library_folder">Library folder</string>
    <string name="config_manga_library_order">Library order</string>
    <string name="config_manga_default_subtitle_language">Default language</string>
    <string name="config_manga_default_subtitle_translate">Default translate</string>
    <string name="config_option_vocabulary_order_description">For description</string>
    <string name="config_option_vocabulary_order_frequency">For frequency</string>
    <string name="config_option_vocabulary_order_favorite">Favorite first</string>
    <string name="config_manga_reading_touch_screen">Touch functions</string>
    <string name="config_manga_reading_show_clock_and_battery">Show clock and battery percent?</string>
    <string name="config_manga_reading_use_magnifier_type">Use zoom in magnifying mode?</string>
    <string name="config_manga_reading_keep_zoom_between_pages">Keep zooming between pages?</string>
    <string name="config_manga_process_vocabulary">Process manga vocabulary</string>
    <string name="config_system_format_date">Date format</string>
    <string name="config_system_language">System language</string>
    <string name="config_system_share_mark">Share marks</string>
    <string name="config_system_share_mark_enabled">Share marks to cloud</string>
    <string name="config_system_share_mark_cloud">Sharing type</string>
    <string name="config_system_share_mark_account">Google account: %s</string>
    <string name="config_system_share_mark_sign_in">Sign in with Google</string>
    <string name="config_system_share_mark_sign_in_error">Sig in error!</string>
    <string name="config_system_share_mark_sign_out_title">Sign out</string>
    <string name="menu_book_reading_chapter">Chapters</string>
    <string name="menu_book_reading_annotation">Annotation</string>
    <string name="menu_book_reading_font_and_page">Font and page</string>
    <string name="menu_book_reading_book_mark">Book mark</string>
    <string name="config_manga_view_mode">View Mode</string>
    <string name="config_manga_view_mode_aspect_fill">Aspect Fill</string>
    <string name="config_manga_view_mode_aspect_fit">Aspect Fit</string>
    <string name="config_manga_view_mode_fit_width">Fit Width</string>
    <string name="config_manga_scrolling_mode">Scrolling mode</string>
    <string name="config_manga_scrolling_vertical">Vertical</string>
    <string name="config_manga_scrolling_horizontal">Horizontal (Left to right)</string>
    <string name="config_manga_scrolling_horizontal_right_to_left">Horizontal (Right to left)</string>
    <string name="config_manga_scrolling_scrolling">Long strip</string>
    <string name="config_manga_scrolling_scrolling_divider">Long strip with gap</string>
    <string name="menu_manga_reading_chapters_menu">Chapters list</string>
    <string name="menu_manga_reading_save_share_image">Save/Share image</string>
    <string name="menu_manga_reading_favorite">Favorite</string>
    <string name="menu_manga_reading_book_mark">Book mark</string>
    <string name="menu_manga_reading_order">List order</string>
    <string name="menu_manga_vocabulary_import">Importing vocabulary</string>
    <string name="menu_manga_reading_floating">Floating popup</string>
    <string name="menu_manga_reading_floating_buttons">Floating buttons</string>
    <string name="menu_manga_reading_options">Reading options</string>
    <string name="menu_manga_reading_show_clock_and_battery">Clock and battery percent</string>
    <string name="menu_manga_reading_use_magnifier_type">Magnifying zoom</string>
    <string name="menu_manga_reading_keep_zoom_between_pages">Keep zooming</string>
    <string name="menu_manga_reading_view_touch">Touch functions</string>
    <string name="menu_manga_reading_config_touch">Configure touch functions</string>
    <string name="menu_manga_reading_color">Page color</string>
    <string name="menu_manga_reading_ocr_file_linked">Ocr and file linked</string>
    <string name="menu_manga_reading_open_kaku">Open Kaku App</string>
    <string name="menu_manga_reading_subtitle">Subtitle</string>
    <string name="menu_manga_reading_file_link">File in another language</string>
    <string name="reading_manga_popup_orientation_portrait">Portrait</string>
    <string name="reading_manga_popup_orientation_portrait_locked">Locked portrait</string>
    <string name="reading_manga_popup_orientation_landscape">Landscape</string>
    <string name="reading_manga_popup_orientation_landscape_locked">Locked landscape</string>
    <string name="reading_manga_popup_orientation_auto">Auto</string>
    <string name="menu_book_config_send">Send file</string>
    <string name="menu_book_config_clear_progress">Clear progress</string>
    <string name="menu_book_config_delete">Delete</string>
    <string name="menu_book_config_detail">Book detail</string>
    <string name="menu_book_config_tag">Add tags</string>
    <string name="menu_book_config_book_mark">Book mark</string>
    <string name="popup_library_book_order_name">For name</string>
    <string name="popup_library_book_order_date">For date</string>
    <string name="popup_library_book_order_access">For last access</string>
    <string name="popup_library_book_order_favorite">Favorite first</string>
    <string name="popup_library_book_order_genre">For genre</string>
    <string name="popup_library_book_order_author">For author</string>
    <string name="popup_library_book_order_series">For series</string>
    <string name="popup_library_book_type_grid_big">Grid big</string>
    <string name="popup_library_book_type_grid_medium">Grid medium</string>
    <string name="popup_library_book_type_separator_big">Grid big with separator</string>
    <string name="popup_library_book_type_separator_medium">Grid medium with separator</string>
    <string name="popup_library_book_type_line">Line</string>
    <string name="menu_history_library">Library</string>
    <string name="menu_history_type">Type</string>
    <string name="menu_history_type_layout">Layout type</string>
</resources>