<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_book_config_tag"
        android:title="@string/menu_book_config_tag"/>
    <item
        android:id="@+id/menu_book_config_book_mark"
        android:title="@string/menu_book_config_book_mark"/>
    <item
        android:id="@+id/menu_book_config_detail"
        android:title="@string/menu_book_config_detail"/>
    <item
        android:id="@+id/menu_book_config_send"
        android:title="@string/menu_book_config_send"/>
    <item
        android:id="@+id/menu_book_config_clear_progress"
        android:title="@string/menu_book_config_clear_progress"/>
    <item
        android:id="@+id/menu_book_config_delete"
        android:title="@string/menu_book_config_delete"/>
</menu>