<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_item_reader_manga_favorite"
        android:title="@string/menu_manga_reading_favorite"
        android:icon="@drawable/ico_favorite_unmark"
        android:orderInCategory="100"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/menu_item_reader_manga_mark_page"
        android:icon="@drawable/ico_animated_book_mark"
        android:orderInCategory="101"
        android:title="@string/menu_manga_reading_book_mark"
        app:showAsAction="always"/>
    
    <item
        android:id="@+id/menu_item_reader_manga_scrolling_mode"
        android:icon="@drawable/ico_reading_mode"
        android:orderInCategory="102"
        android:title="@string/config_manga_scrolling_mode"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/reading_manga_scrolling_horizontal"
                    android:title="@string/config_manga_scrolling_horizontal" />
                <item
                    android:id="@+id/reading_manga_scrolling_horizontal_right_to_left"
                    android:title="@string/config_manga_scrolling_horizontal_right_to_left" />
                <item
                    android:id="@+id/reading_manga_scrolling_vertical"
                    android:title="@string/config_manga_scrolling_vertical" />
                <item
                    android:id="@+id/reading_manga_scrolling_scrolling"
                    android:title="@string/config_manga_scrolling_scrolling" />
                <item
                    android:id="@+id/reading_manga_scrolling_scrolling_divider"
                    android:title="@string/config_manga_scrolling_scrolling_divider" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_item_reader_manga_aspect_ratio"
        android:icon="@drawable/ico_reader_mode"
        android:orderInCategory="103"
        android:title="@string/config_manga_view_mode"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/manga_view_mode_aspect_fill"
                    android:title="@string/config_manga_view_mode_aspect_fill" />
                <item
                    android:id="@+id/manga_view_mode_aspect_fit"
                    android:title="@string/config_manga_view_mode_aspect_fit" />
                <item
                    android:id="@+id/manga_view_mode_fit_width"
                    android:title="@string/config_manga_view_mode_fit_width" />
            </group>
        </menu>
    </item>

    <item
        android:icon="@drawable/ico_reading_options"
        android:orderInCategory="104"
        android:title="@string/menu_manga_reading_options"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_item_reader_manga_use_magnifier_type"
                android:icon="@drawable/ico_use_magnifier_type"
                android:orderInCategory="101"
                android:title="@string/menu_manga_reading_use_magnifier_type"
                android:checkable="true"
                app:showAsAction="never"/>

            <item
                android:id="@+id/menu_item_reader_manga_show_clock_and_battery"
                android:icon="@drawable/ico_show_clock_and_battery"
                android:orderInCategory="102"
                android:title="@string/menu_manga_reading_show_clock_and_battery"
                android:checkable="true"
                app:showAsAction="never"/>

            <item
                android:id="@+id/menu_item_reader_manga_keep_zoom_between_pages"
                android:icon="@drawable/ico_keep_zoom_between_pages"
                android:orderInCategory="103"
                android:title="@string/menu_manga_reading_keep_zoom_between_pages"
                android:checkable="true"
                app:showAsAction="never"/>

            <item
                android:id="@+id/menu_item_reader_manga_popup_color"
                android:icon="@drawable/ico_color_settings"
                android:orderInCategory="104"
                android:title="@string/menu_manga_reading_color"
                app:showAsAction="never"/>

            <item
                android:id="@+id/menu_item_reader_manga_view_touch_screen"
                android:icon="@drawable/ico_view_touch_screen"
                android:orderInCategory="105"
                android:title="@string/menu_manga_reading_view_touch"
                app:showAsAction="never"/>

            <item
                android:id="@+id/menu_item_reader_manga_config_touch_screen"
                android:icon="@drawable/ico_view_touch_screen"
                android:orderInCategory="105"
                android:title="@string/menu_manga_reading_config_touch"
                app:showAsAction="never"/>
        </menu>
    </item>

    <item
        android:icon="@drawable/ico_ocr_file_linked"
        android:orderInCategory="105"
        android:title="@string/menu_manga_reading_ocr_file_linked"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_item_reader_manga_popup_subtitle"
                android:icon="@drawable/ico_change_language"
                android:orderInCategory="102"
                android:title="@string/menu_manga_reading_subtitle"
                app:showAsAction="never"/>

            <item
                android:id="@+id/menu_item_reader_manga_file_link"
                android:icon="@drawable/ico_file_link"
                android:orderInCategory="103"
                android:title="@string/menu_manga_reading_file_link"
                app:showAsAction="never"/>

            <item
                android:id="@+id/menu_item_reader_manga_open_kaku"
                android:icon="@mipmap/ico_app_kaku"
                android:orderInCategory="104"
                android:title="@string/menu_manga_reading_open_kaku"
                app:showAsAction="never"/>
        </menu>
    </item>

    <item
        android:id="@+id/menu_item_reader_manga_popup_open_floating"
        android:icon="@drawable/ico_floating_window"
        android:orderInCategory="106"
        android:title="@string/menu_manga_reading_floating"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_item_reader_manga_floating_buttons"
        android:icon="@drawable/ico_item_floating_buttons"
        android:orderInCategory="107"
        android:title="@string/menu_manga_reading_floating_buttons"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_item_reader_manga_chapters_menu"
        android:icon="@drawable/ico_item_chapters_menu"
        android:orderInCategory="108"
        android:title="@string/menu_manga_reading_chapters_menu"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_item_reader_manga_save_share_image"
        android:icon="@drawable/ico_save_share_image"
        android:orderInCategory="109"
        android:title="@string/menu_manga_reading_save_share_image"
        app:showAsAction="never"/>

</menu>