<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_history_search"
        android:icon="@drawable/ico_search"
        android:orderInCategory="100"
        android:title="@string/menu_search"
        android:visible="true"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

    <item android:id="@+id/menu_history_list_order"
        android:title="@string/menu_manga_reading_order"
        android:icon="@drawable/ico_animated_sort_to_desc_name"
        android:orderInCategory="101"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/menu_history_type_layout"
        android:icon="@drawable/ico_animated_type_grid_list_exit"
        android:orderInCategory="102"
        android:title="@string/menu_history_type_layout"
        android:visible="true"
        app:showAsAction="always" />

    <item android:id="@+id/menu_history_library"
        android:title="@string/menu_history_library"
        android:icon="@drawable/ico_animated_menu_type_library"
        android:orderInCategory="103"
        app:showAsAction="always">
        <menu/>
    </item>

    <item android:id="@+id/menu_history_type"
        android:title="@string/menu_history_type"
        android:icon="@drawable/ico_menu_type_all"
        android:orderInCategory="104"
        app:showAsAction="always">
        <menu/>
    </item>
</menu>
