<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppBackground.Accent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.library.manga.LibraryMangaPopupOrder">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_small"
        android:paddingTop="@dimen/margin"
        android:paddingBottom="@dimen/margin_bottom">
        <br.com.fenix.bilingualreader.view.components.TriStateCheckBox
            android:id="@+id/popup_library_order_book_name"
            style="@style/OrderCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/popup_library_book_order_name"/>

        <br.com.fenix.bilingualreader.view.components.TriStateCheckBox
            android:id="@+id/popup_library_order_book_date"
            style="@style/OrderCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/popup_library_book_order_date"/>

        <br.com.fenix.bilingualreader.view.components.TriStateCheckBox
            android:id="@+id/popup_library_order_book_access"
            style="@style/OrderCheckBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:button="@null"
            android:text="@string/popup_library_book_order_access"/>

        <br.com.fenix.bilingualreader.view.components.TriStateCheckBox
            android:id="@+id/popup_library_order_book_favorite"
            style="@style/OrderCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/popup_library_book_order_favorite"/>

        <br.com.fenix.bilingualreader.view.components.TriStateCheckBox
            android:id="@+id/popup_library_order_book_genre"
            style="@style/OrderCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/popup_library_book_order_genre"/>

        <br.com.fenix.bilingualreader.view.components.TriStateCheckBox
            android:id="@+id/popup_library_order_book_author"
            style="@style/OrderCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/popup_library_book_order_author"/>

        <br.com.fenix.bilingualreader.view.components.TriStateCheckBox
            android:id="@+id/popup_library_order_book_series"
            style="@style/OrderCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/popup_library_book_order_series"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>

