<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppBackground.Accent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.library.book.LibraryBookPopupType">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin"
        android:paddingBottom="@dimen/margin_bottom">
        <CheckBox
            android:id="@+id/popup_library_book_type_grid_big"
            style="@style/CheckBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/popup_library_book_type_grid_big"/>

        <CheckBox
            android:id="@+id/popup_library_book_type_grid_medium"
            style="@style/CheckBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/popup_library_book_type_grid_medium"/>

        <CheckBox
            android:id="@+id/popup_library_book_type_separator_big"
            style="@style/CheckBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/popup_library_book_type_separator_big"/>

        <CheckBox
            android:id="@+id/popup_library_book_type_separator_medium"
            style="@style/CheckBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/popup_library_book_type_separator_medium"/>

        <CheckBox
            android:id="@+id/popup_library_book_type_line"
            style="@style/CheckBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/popup_library_book_type_line"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>

